# cplus_simple_language

./: .gitignore  Main.cpp  README.md  README_CN.md  cplus_simple_language.sln  cplus_simple_language.vcxproj  cplus_simple_language.vcxproj.filters  target.md
source/: CMakeLists.txt  Define.cpp
source/Compile/: CompileManager.cpp  CompileManager.h  CompilerUtil.cpp  CompilerUtil.h  FileMetatUtil.cpp  FileMetatUtil.h  Token.cpp  Token.cs  Token.h
source/Core/: MetaCallLink.cpp  MetaCallNode.cpp  MetaClass.cs  MetaData.cpp  MetaDefineParam.cpp  MetaDefineParam.h  MetaEnum.cs  MetaEnum.h  MetaExpressNode.cpp  MetaMemberEnum.cpp  MetaMemberFunction.cpp  MetaModule.cs  MetaNamespace.cpp  MetaNamespace.h  MetaNode.cpp  MetaNode.cs  MetaNode.h  MetaTemplate.cpp  MetaTemplate.cs  MetaTemplateClass.cs  MetaType.h  MetaTypeFactory.cs  MetaVariable.h  MetaVariableManager.cpp  MetaVariableManager.cs  MetaVariableManager.h  MetaVisitCall.cs  MetaVisitCall.h  ModuleManager.cpp  ModuleManager.cs  NamespaceManager.cpp  NamespaceManager.cs  NamespaceManager.h
source/Debug/: Log.cpp  Log.cs  Log.h
source/Export/: LLVMManager.cs
source/IR/: IRBase.cpp  IRBase.h  IRCall.cpp  IRCall.cs  IRData.h  IRExpress.cpp  IRExpress.h  IRManager.cpp  IRManager.cs  IRMethod.cpp  IROpEnum.cs  IROpEnum.h  IRVariable.cpp
source/Project/: ProjectClass.cpp  ProjectCompile.cpp  ProjectCompile.cs  ProjectCompile.h  ProjectData.h  ProjectManager.cpp  ProjectManager.cs  ProjectManager.h  ProjectParse.cpp
source/VM/: AnyObject.cpp  AnyObject.h  BoolObject.cs  ByteObject.cs  ByteObject.h  Int64Object.h  (+17 more)
(+548 files in other folders)
